--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./styles/style1.css">
+</head>
+
+<body>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">ComiCos</a>
+          </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Latest Arrivals</a></li>
+                <li><a href="#">Popular Forever</a></li>
+              </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> Mr. Stan Lee
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Account Settings</a></li>
+                  <li><a href="#">Order History</a></li>
+                  <li><a href="#">Sign out</a></li>
+                </ul>
+              </li>
+            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+          </ul>
+        </div>
+      </nav>
+
+    <div class="container">
+        <h1>Welcome to our online comic store</h1>
+        <p>This is some text.</p>
+    </div>
+
+
+
+    <div class="footer">
+        <div class="footer-contents">
+            <p>Made by: Karanveer Harika</p>
+        </div>
+
+      </div>
+
+</body>
+
+</html>
