--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./styles/style1.css">
+    <link rel="stylesheet" href="../styles/style1.css">
 </head>
 
 <body>
@@ -18,11 +18,11 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">ComiCos</a>
+            <a class="navbar-brand" href="../index.html">ComiCos</a>
           </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="./Pages/latestArrivals.html">Latest Arrivals</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li class="active"><a href="#">Latest Arrivals</a></li>
                 <li><a href="#">Popular Forever</a></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -42,7 +42,7 @@
       </nav>
 
     <div class="container">
-        <h1>Welcome to our online comic store</h1>
+        <h1>Keep Up with the Latest Arrivals</h1>
         <p>This is some text.</p>
     </div>
 
