all pages there

--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -23,7 +23,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="../index.html">Home</a></li>
                 <li class="active"><a href="#">Latest Arrivals</a></li>
-                <li><a href="#">Popular Forever</a></li>
+                <li><a href="./Popular.html">Popular Forever</a></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
