--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">ComiCos</a>
+            <a class="navbar-brand" href="#">ArtistMine</a>
           </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -42,11 +42,82 @@
       </nav>
 
     <div class="container">
-        <h1>Welcome to our online comic store</h1>
-        <p>This is some text.</p>
+        <h1>Welcome to our online store</h1>
+        <h4>You can find everything that you are looking for</h4>
+    </div>
+
+    <div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+
+            <div class="item active">
+                <div class="crop">
+
+                    <img src="./images/car1.jpg" alt="Los Angeles" style="width:100%;">
+                </div>
+              <div class="carousel-caption">
+                <h3>Ideas</h3>
+                <p>We turn idead into reality!</p>
+              </div>
+            </div>
+
+            <div class="item">
+                <div class="crop">
+
+                    <img src="./images/car3.jpg" alt="Chicago" style="width:100%;">
+                </div>
+              <div class="carousel-caption">
+                <h3>Greatness</h3>
+                <p>Making customers happy!</p>
+              </div>
+            </div>
+
+            <div class="item">
+                <div class="crop">
+
+                    <img src="./images/car2.jpg" alt="New York" style="width:100%;">
+                </div>
+              <div class="carousel-caption">
+                <h3>Technology</h3>
+                <p>Best in Class Tech used!</p>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
     </div>
 
 
+
+    <div class="container">
+        <h2>Get the Best Quality Work</h2>
+        <h4>Place an order and make you dreams come true!!</h4>
+
+    </div>
+
+
+    <p style="color: rgb(155, 155, 155);">   .. </p>
+    <p style="color: rgb(155, 155, 155);">   .. </p>
+    <p style="color: rgb(155, 155, 155);">   .. </p>
+    <p style="color: rgb(155, 155, 155);">   .. </p>
 
     <div class="footer">
         <div class="footer-contents">
