--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h4>You can find everything that you are looking for</h4>
     </div>
 
-    <div class="container">
+    <div class="container gap">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
@@ -61,7 +61,7 @@
             <div class="item active">
                 <div class="crop">
 
-                    <img src="./images/car1.jpg" alt="Los Angeles" style="width:100%;">
+                    <img src="./images/car1.jpg" alt="Ideas" style="width:100%;">
                 </div>
               <div class="carousel-caption">
                 <h3>Ideas</h3>
@@ -72,7 +72,7 @@
             <div class="item">
                 <div class="crop">
 
-                    <img src="./images/car3.jpg" alt="Chicago" style="width:100%;">
+                    <img src="./images/car3.jpg" alt="Greatness" style="width:100%;">
                 </div>
               <div class="carousel-caption">
                 <h3>Greatness</h3>
@@ -83,7 +83,7 @@
             <div class="item">
                 <div class="crop">
 
-                    <img src="./images/car2.jpg" alt="New York" style="width:100%;">
+                    <img src="./images/car2.jpg" alt="Technology" style="width:100%;">
                 </div>
               <div class="carousel-caption">
                 <h3>Technology</h3>
@@ -106,11 +106,26 @@
     </div>
 
 
+    <div class="gap"></div>
+
 
     <div class="container">
         <h2>Get the Best Quality Work</h2>
         <h4>Place an order and make you dreams come true!!</h4>
 
+        <div class="gap"></div>
+
+        <div class="row">
+            <div class="col-sm-4 myCentre"><img src="./images/select.png" alt="select" style="width:50%;"></div>
+            <div class="col-sm-4 myCentre"><img src="./images/shopping-cart.png" alt="cart" style="width:50%;">t</div>
+            <div class="col-sm-4 myCentre"><img src="./images/dancing.png" alt="select" style="width:50%;"></div>
+          </div>
+
+        <div class="row">
+            <div class="col-sm-4 myCentre"><h4>Select the one you like</h4></div>
+            <div class="col-sm-4 myCentre"><h4>Finalize your shopping cart</h4></div>
+            <div class="col-sm-4 myCentre"><h4>Enjoy your product</h4></div>
+          </div>
     </div>
 
 
@@ -120,7 +135,7 @@
     <p style="color: rgb(155, 155, 155);">   .. </p>
 
     <div class="footer">
-        <div class="footer-contents">
+        <div class="footer-contents ">
             <p>Made by: Karanveer Harika</p>
         </div>
 
