--- a/index.html
+++ b/index.html
@@ -116,16 +116,14 @@
         <div class="gap"></div>
 
         <div class="row">
-            <div class="col-sm-4 myCentre"><img src="./images/select.png" alt="select" style="width:50%;"></div>
-            <div class="col-sm-4 myCentre"><img src="./images/shopping-cart.png" alt="cart" style="width:50%;">t</div>
-            <div class="col-sm-4 myCentre"><img src="./images/dancing.png" alt="select" style="width:50%;"></div>
-          </div>
+            <div class="row">
+                <div class="col-sm-4 myCentre"><img src="./images/select.png" alt="select" style="width:50%;"><br><h4>Select the one you like</h4></div>
+                <div class="col-sm-4 myCentre"><img src="./images/shopping-cart.png" alt="cart" style="width:50%;"><br><h4>Finalize your shopping cart</h4></div>
+                <div class="col-sm-4 myCentre"><img src="./images/dancing.png" alt="select" style="width:50%;"><br><h4>Enjoy your product</h4></div>
+              </div>
 
-        <div class="row">
-            <div class="col-sm-4 myCentre"><h4>Select the one you like</h4></div>
-            <div class="col-sm-4 myCentre"><h4>Finalize your shopping cart</h4></div>
-            <div class="col-sm-4 myCentre"><h4>Enjoy your product</h4></div>
-          </div>
+        </div>
+
     </div>
 
 
