--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -17,35 +17,64 @@
 
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="../index.html">ArtistMine</a>
-          </div>
+            <div class="navbar-header">
+                <a class="navbar-brand" href="../index.html">ArtistMine</a>
+            </div>
             <ul class="nav navbar-nav">
                 <li><a href="../index.html">Home</a></li>
                 <li class="active"><a href="#">Latest Arrivals</a></li>
                 <li><a href="./Popular.html">Popular Forever</a></li>
-              </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
 
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> Mr. Stan Lee
-                    <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Account Settings</a></li>
-                  <li><a href="#">Order History</a></li>
-                  <li><a href="#">Sign out</a></li>
-                </ul>
-              </li>
-            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-          </ul>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span
+                            class="glyphicon glyphicon-user"></span> Mr. Stan Lee
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Account Settings</a></li>
+                        <li><a href="#">Order History</a></li>
+                        <li><a href="#">Sign out</a></li>
+                    </ul>
+                </li>
+                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+            </ul>
         </div>
-      </nav>
+    </nav>
 
     <div class="container">
         <h1>Keep Up with the Latest Arrivals</h1>
-        <p>This is some text.</p>
+        <p>Browse through the latest availables</p>
     </div>
 
+    <div class="gap"></div>
+
+    <div class="container">
+        <div class="row gap">
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p1.jpg" alt="select"
+                    style="width:100%;"><br><span>Select the one you like</span></div>
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p2.jpg" alt="cart"
+                    style="width:100%;"><br><span>Finalize your shopping cart</span></div>
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p3.jpg" alt="select"
+                    style="width:100%;"><br><span>Enjoy your product</span></div>
+        </div>
+
+        <div class="row gap">
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p4.jpg" alt="select"
+                    style="width:100%;"><br><span>Select the one you like</span></div>
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p5.jpg" alt="cart"
+                    style="width:100%;"><br><span>Finalize your shopping cart</span></div>
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p6.jpg" alt="select"
+                    style="width:100%;"><br><span>Enjoy your product</span></div>
+        </div>
+
+    </div>
+
+
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
 
 
     <div class="footer">
@@ -53,7 +82,7 @@
             <p>Made by: Karanveer Harika</p>
         </div>
 
-      </div>
+    </div>
 
 </body>
 
