--- a/index.html
+++ b/index.html
@@ -17,29 +17,30 @@
 
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">ArtistMine</a>
-          </div>
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">ArtistMine</a>
+            </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="./Pages/latestArrivals.html">Latest Arrivals</a></li>
                 <li><a href="./Pages/Popular.html">Popular Forever</a></li>
-              </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
 
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> Mr. Stan Lee
-                    <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Account Settings</a></li>
-                  <li><a href="#">Order History</a></li>
-                  <li><a href="#">Sign out</a></li>
-                </ul>
-              </li>
-            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-          </ul>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span
+                            class="glyphicon glyphicon-user"></span> Mr. Stan Lee
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Account Settings</a></li>
+                        <li><a href="#">Order History</a></li>
+                        <li><a href="#">Sign out</a></li>
+                    </ul>
+                </li>
+                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+            </ul>
         </div>
-      </nav>
+    </nav>
 
     <div class="container">
         <h1>Welcome to our online store</h1>
@@ -48,60 +49,60 @@
 
     <div class="container gap">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-          </ol>
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
 
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
 
-            <div class="item active">
-                <div class="crop">
+                <div class="item active">
+                    <div class="crop">
 
-                    <img src="./images/car1.jpg" alt="Ideas" style="width:100%;">
+                        <img src="./images/car1.jpg" alt="Ideas" style="width:100%;">
+                    </div>
+                    <div class="carousel-caption">
+                        <h3>Ideas</h3>
+                        <p>We turn idead into reality!</p>
+                    </div>
                 </div>
-              <div class="carousel-caption">
-                <h3>Ideas</h3>
-                <p>We turn idead into reality!</p>
-              </div>
+
+                <div class="item">
+                    <div class="crop">
+
+                        <img src="./images/car3.jpg" alt="Greatness" style="width:100%;">
+                    </div>
+                    <div class="carousel-caption">
+                        <h3>Greatness</h3>
+                        <p>Making customers happy!</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="crop">
+
+                        <img src="./images/car2.jpg" alt="Technology" style="width:100%;">
+                    </div>
+                    <div class="carousel-caption">
+                        <h3>Technology</h3>
+                        <p>Best in Class Tech used!</p>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="item">
-                <div class="crop">
-
-                    <img src="./images/car3.jpg" alt="Greatness" style="width:100%;">
-                </div>
-              <div class="carousel-caption">
-                <h3>Greatness</h3>
-                <p>Making customers happy!</p>
-              </div>
-            </div>
-
-            <div class="item">
-                <div class="crop">
-
-                    <img src="./images/car2.jpg" alt="Technology" style="width:100%;">
-                </div>
-              <div class="carousel-caption">
-                <h3>Technology</h3>
-                <p>Best in Class Tech used!</p>
-              </div>
-            </div>
-
-          </div>
-
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 
@@ -115,29 +116,35 @@
 
         <div class="gap"></div>
 
-        <div class="row">
+        <div class="container">
             <div class="row">
-                <div class="col-sm-4 myCentre"><img src="./images/select.png" alt="select" style="width:50%;"><br><h4>Select the one you like</h4></div>
-                <div class="col-sm-4 myCentre"><img src="./images/shopping-cart.png" alt="cart" style="width:50%;"><br><h4>Finalize your shopping cart</h4></div>
-                <div class="col-sm-4 myCentre"><img src="./images/dancing.png" alt="select" style="width:50%;"><br><h4>Enjoy your product</h4></div>
-              </div>
+                <div class="col-sm-4 myCentre"><img src="./images/select.png" alt="select" style="width:50%;"><br>
+                    <h4>Select the one you like</h4>
+                </div>
+                <div class="col-sm-4 myCentre"><img src="./images/shopping-cart.png" alt="cart" style="width:50%;"><br>
+                    <h4>Finalize your shopping cart</h4>
+                </div>
+                <div class="col-sm-4 myCentre"><img src="./images/dancing.png" alt="select" style="width:50%;"><br>
+                    <h4>Enjoy your product</h4>
+                </div>
+            </div>
 
         </div>
 
     </div>
 
 
-    <p style="color: rgb(155, 155, 155);">   .. </p>
-    <p style="color: rgb(155, 155, 155);">   .. </p>
-    <p style="color: rgb(155, 155, 155);">   .. </p>
-    <p style="color: rgb(155, 155, 155);">   .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
 
     <div class="footer">
         <div class="footer-contents ">
             <p>Made by: Karanveer Harika</p>
         </div>
 
-      </div>
+    </div>
 
 </body>
 
