--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -51,21 +51,45 @@
 
     <div class="container">
         <div class="row gap">
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p1.jpg" alt="select"
-                    style="width:100%;"><br><span>Select the one you like</span></div>
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p2.jpg" alt="cart"
-                    style="width:100%;"><br><span>Finalize your shopping cart</span></div>
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p3.jpg" alt="select"
-                    style="width:100%;"><br><span>Enjoy your product</span></div>
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p1.jpg" alt="boat"
+                    style="width:100%;"><br>
+                    <h5>BOAT TO PARADISE</h5>
+                    <span><del> $150</del> now $75 </span>
+            </div>
+
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p2.jpg" alt="oxygen"
+                    style="width:100%;"><br>
+                    <h5>OXIDIZE</h5>
+                    <span><del> $150</del> now $75 </span>
+            </div>
+
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p3.jpg" alt="bridge"
+                    style="width:100%;"><br>
+                    <h5>ACROSS THE RIVER</h5>
+                    <span><del> $150</del> now $75</span>
+            </div>
+
         </div>
 
         <div class="row gap">
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p4.jpg" alt="select"
-                    style="width:100%;"><br><span>Select the one you like</span></div>
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p5.jpg" alt="cart"
-                    style="width:100%;"><br><span>Finalize your shopping cart</span></div>
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p6.jpg" alt="select"
-                    style="width:100%;"><br><span>Enjoy your product</span></div>
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p4.jpg" alt="yellow"
+                    style="width:100%;"><br>
+                    <h5>YELLOW MELLOW</h5>
+                    <span><del> $150</del> now $75 </span>
+            </div>
+
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p5.jpg" alt="chucky"
+                    style="width:100%;"><br>
+                    <h5>AYE CHUCKY!</h5>
+                    <span><del> $150</del> now $75 </span>
+            </div>
+
+            <div class="col-sm-4 myCentre"><img src="../images/latest/p6.jpg" alt="ruins"
+                    style="width:100%;"><br>
+                    <h5>RUINS</h5>
+                    <span><del> $150</del> now $75</span>
+            </div>
+
         </div>
 
     </div>
