--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li><a href="#">Sign out</a></li>
                     </ul>
                 </li>
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                <li><a href="./Pages/cart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
             </ul>
         </div>
     </nav>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="carousel-caption">
                         <h3>Ideas</h3>
-                        <p>We turn idead into reality!</p>
+                        <p>We turn ideas into reality!</p>
                     </div>
                 </div>
 
@@ -112,7 +112,7 @@
 
     <div class="container">
         <h2>Get the Best Quality Work</h2>
-        <h4>Place an order and make you dreams come true!!</h4>
+        <h4>Place an order and make your dreams come true!!</h4>
 
         <div class="gap"></div>
 
