--- a/Pages/Popular.html
+++ b/Pages/Popular.html
@@ -36,7 +36,7 @@
                   <li><a href="#">Sign out</a></li>
                 </ul>
               </li>
-            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+            <li><a href="../Pages/cart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
           </ul>
         </div>
       </nav>
