--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -37,7 +37,7 @@
                         <li><a href="#">Sign out</a></li>
                     </ul>
                 </li>
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                <li><a href="../Pages/cart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
             </ul>
         </div>
     </nav>
@@ -54,19 +54,19 @@
             <div class="col-sm-4 myCentre"><img src="../images/latest/p1.jpg" alt="boat"
                     style="width:100%;"><br>
                     <h5>BOAT TO PARADISE</h5>
-                    <span><del> $150</del> now $75 </span>
+                    <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
             <div class="col-sm-4 myCentre"><img src="../images/latest/p2.jpg" alt="oxygen"
                     style="width:100%;"><br>
                     <h5>OXIDIZE</h5>
-                    <span><del> $150</del> now $75 </span>
+                    <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
             <div class="col-sm-4 myCentre"><img src="../images/latest/p3.jpg" alt="bridge"
                     style="width:100%;"><br>
                     <h5>ACROSS THE RIVER</h5>
-                    <span><del> $150</del> now $75</span>
+                    <span><del> $150</del> now $75</span> <span class="redDye">(50% off)</span>
             </div>
 
         </div>
@@ -75,19 +75,19 @@
             <div class="col-sm-4 myCentre"><img src="../images/latest/p4.jpg" alt="yellow"
                     style="width:100%;"><br>
                     <h5>YELLOW MELLOW</h5>
-                    <span><del> $150</del> now $75 </span>
+                    <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
             <div class="col-sm-4 myCentre"><img src="../images/latest/p5.jpg" alt="chucky"
                     style="width:100%;"><br>
                     <h5>AYE CHUCKY!</h5>
-                    <span><del> $150</del> now $75 </span>
+                    <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
             <div class="col-sm-4 myCentre"><img src="../images/latest/p6.jpg" alt="ruins"
                     style="width:100%;"><br>
                     <h5>RUINS</h5>
-                    <span><del> $150</del> now $75</span>
+                    <span><del> $150</del> now $75</span> <span class="redDye">(50% off)</span>
             </div>
 
         </div>
