--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../styles/style1.css">
+    <script src="../scripts/main.js"></script>
 </head>
 
 <body>
@@ -44,11 +45,44 @@
 
     <div class="container">
         <h1>Your awesome cart</h1>
-        <p>Proceed with your order!!</p>
+        <p>Proceed with your order</p>
     </div>
 
     <div class="gap"></div>
 
+
+    <div class="container">
+        <div class="row gap">
+
+            <div class="col-sm-4 myCentre"><a href="./cart.html"><img src="../images/latest/p1.jpg" alt="boat"
+                        style="width:100%;"><br></a>
+                <h5>BOAT TO PARADISE</h5>
+            </div>
+
+            <div class="col-sm-8 ">
+                <div class="row">
+                    <div class="col-sm-3">Product Name:</div>
+                    <div class="col-sm-4">Boat To Paradise</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Number of Items:</div>
+                    <div class="col-sm-4">1</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Cart Subtotal:</div>
+                    <div class="col-sm-4">$75</div>
+                </div>
+                <div class="row gap">
+
+                <div class="row">
+                    <div class="col-sm-4"><a href="./latestArrivals.html" class="btn btn-danger" role="button">Back</a></div>
+                    <div class="col-sm-4"><a href="../index.html" class="btn btn-success" role="button">Proceed</a></div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 
 
 
