--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../styles/style1.css">
+    <script src="../scripts/main.js"></script>
 </head>
 
 <body>
@@ -51,20 +52,21 @@
 
     <div class="container">
         <div class="row gap">
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p1.jpg" alt="boat"
-                    style="width:100%;"><br>
+
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p1.jpg" alt="boat"
+                    style="width:100%;"><br></a>
                     <h5>BOAT TO PARADISE</h5>
                     <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p2.jpg" alt="oxygen"
-                    style="width:100%;"><br>
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p2.jpg" alt="oxygen"
+                    style="width:100%;"><br></a>
                     <h5>OXIDIZE</h5>
                     <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p3.jpg" alt="bridge"
-                    style="width:100%;"><br>
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p3.jpg" alt="bridge"
+                    style="width:100%;"><br></a>
                     <h5>ACROSS THE RIVER</h5>
                     <span><del> $150</del> now $75</span> <span class="redDye">(50% off)</span>
             </div>
@@ -72,20 +74,20 @@
         </div>
 
         <div class="row gap">
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p4.jpg" alt="yellow"
-                    style="width:100%;"><br>
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p4.jpg" alt="yellow"
+                    style="width:100%;"><br></a>
                     <h5>YELLOW MELLOW</h5>
                     <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p5.jpg" alt="chucky"
-                    style="width:100%;"><br>
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p5.jpg" alt="chucky"
+                    style="width:100%;"><br></a>
                     <h5>AYE CHUCKY!</h5>
                     <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
             </div>
 
-            <div class="col-sm-4 myCentre"><img src="../images/latest/p6.jpg" alt="ruins"
-                    style="width:100%;"><br>
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p6.jpg" alt="ruins"
+                    style="width:100%;"><br></a>
                     <h5>RUINS</h5>
                     <span><del> $150</del> now $75</span> <span class="redDye">(50% off)</span>
             </div>
