--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -75,8 +75,9 @@
                 <div class="row gap">
 
                 <div class="row">
-                    <div class="col-sm-4"><a href="./latestArrivals.html" class="btn btn-danger" role="button">Back</a></div>
-                    <div class="col-sm-4"><a href="../index.html" class="btn btn-success" role="button">Proceed</a></div>
+                    <div class="col-sm-4"><input type="submit" class="btn btn-danger" value="Back" onclick="history.back()"></div>
+
+                    <div class="col-sm-4"><a href="./payment.html" class="btn btn-success" role="button">Proceed</a></div>
                 </div>
             </div>
 
