--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -51,8 +51,8 @@
     <div class="gap"></div>
 
     <div class="container">
+        &#9432; For this demo UI Website, all the products redirect to same image in the shopping cart.
         <div class="row gap">
-
             <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p1.jpg" alt="boat"
                     style="width:100%;"><br></a>
                     <h5>BOAT TO PARADISE</h5>
