--- a/Pages/Popular.html
+++ b/Pages/Popular.html
@@ -43,10 +43,66 @@
 
     <div class="container">
         <h1>Always Liked</h1>
-        <p>This is some text.</p>
+        <p>This is what all desire!</p>
     </div>
 
 
+    <div class="gap"></div>
+
+    <div class="container">
+        &#9432; For this demo UI Website, all the products redirect to same image in the shopping cart.
+        <div class="row gap">
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p4.jpg" alt="yellow"
+                style="width:100%;"><br></a>
+                <h5>YELLOW MELLOW</h5>
+                <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
+            </div>
+
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p6.jpg" alt="ruins"
+                style="width:100%;"><br></a>
+                <h5>RUINS</h5>
+                <span><del> $150</del> now $75</span> <span class="redDye">(50% off)</span>
+            </div>
+
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p1.jpg" alt="boat"
+                    style="width:100%;"><br></a>
+                    <h5>BOAT TO PARADISE</h5>
+                    <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
+            </div>
+
+
+
+        </div>
+
+        <div class="row gap">
+
+
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p5.jpg" alt="chucky"
+                    style="width:100%;"><br></a>
+                    <h5>AYE CHUCKY!</h5>
+                    <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
+            </div>
+
+            <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p2.jpg" alt="oxygen"
+                style="width:100%;"><br></a>
+                <h5>OXIDIZE</h5>
+                <span><del> $150</del> now $75 </span> <span class="redDye">(50% off)</span>
+        </div>
+
+        <div class="col-sm-4 myCentre"><a href="./cart.html""><img src="../images/latest/p3.jpg" alt="bridge"
+                style="width:100%;"><br></a>
+                <h5>ACROSS THE RIVER</h5>
+                <span><del> $150</del> now $75</span> <span class="redDye">(50% off)</span>
+        </div>
+
+        </div>
+
+    </div>
+
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
+    <p style="color: rgb(155, 155, 155);"> .. </p>
 
     <div class="footer">
         <div class="footer-contents">
