--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </nav>
 
     <div class="container">
-        <h1>Welcome to our online store</h1>
-        <h4>You can find everything that you are looking for</h4>
+        <h1>Welcome to our Online Store</h1>
+        <h4>You can find everything here that you are looking for</h4>
     </div>
 
     <div class="container gap">
@@ -118,7 +118,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-4 myCentre"><img src="./images/select.png" alt="select" style="width:50%;"><br>
+                <div class="col-sm-4 myCentre"><a href="./Pages/latestArrivals.html""><img src="./images/select.png" alt="select" style="width:50%;"><br></a>
                     <h4>Select the one you like</h4>
                 </div>
                 <div class="col-sm-4 myCentre"><img src="./images/shopping-cart.png" alt="cart" style="width:50%;"><br>
