--- a/Pages/Popular.html
+++ b/Pages/Popular.html
@@ -28,7 +28,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
 
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> Mr. Stan Lee
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> Karanveer Harika
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Account Settings</a></li>
