--- a/Pages/latestArrivals.html
+++ b/Pages/latestArrivals.html
@@ -30,7 +30,7 @@
                 <li class="dropdown">
 
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span
-                            class="glyphicon glyphicon-user"></span> Mr. Stan Lee
+                            class="glyphicon glyphicon-user"></span> Karanveer Harika
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Account Settings</a></li>
