--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -12,6 +12,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../styles/style1.css">
     <script src="../scripts/main.js"></script>
+    <link rel="icon" href="../images/icon.png">
+
+
 </head>
 
 <body>
